force-app/main/default/src/objects/Pending_Lead_MVN__c/Pending_Lead_MVN__c.object-meta.xml
<CustomObject>
    <label>Pending Consumer</label>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Pending Consumer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Consumers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>