force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Agreement_Id_MVN__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Id_MVN__c</fullName>
    <description>Adobe Sign Agreement Id.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>