force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Anonymized_MVN__c.field-meta.xml
<CustomField>
    <fullName>Anonymized_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the record has been anonymized.</description>
    <label>Anonymized</label>
    <type>Checkbox</type>
</CustomField>