force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/BirthDate_MVN__c.field-meta.xml
<CustomField>
    <fullName>BirthDate_MVN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>