force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/City_MVN__c.field-meta.xml
<CustomField>
    <fullName>City_MVN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>