force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Consumer_has_consented_to_the_prog_MVN__c.field-meta.xml
<CustomField>
    <fullName>Consumer_has_consented_to_the_prog_MVN__c</fullName>
    <description>Captures whether the consumer has provided their consent to enter the program.</description>
    <label>Consumer has consented to the program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>