force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Consumer_Status_MVN__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Status_MVN__c</fullName>
    <label>Consumer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
                <default>true</default>
                <label>Enrolled</label>
            </value>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>Consented</fullName>
            </value>
            <value>
                <fullName>Declined Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>