force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Email_MVN__c.field-meta.xml
<CustomField>
    <fullName>Email_MVN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>