force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Email_Opt_In_MVN__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_MVN__c</fullName>
    <description>Indicates if the participant has opted in to receive email</description>
    <label>Email Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_MVN</valueSetName>
    </valueSet>
</CustomField>