force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Enrollment_Type_MVN__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type_MVN__c</fullName>
    <description>Indicates the type of enrollment being made when converting an interaction to an enrollment.</description>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive Screening Result</fullName>
            </value>
            <value>
                <fullName>Positive But Low Indication</fullName>
            </value>
            <value>
                <fullName>Negative Screening Result</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>