force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/First_Scheduled_Treatment_MVN__c.field-meta.xml
<CustomField>
    <fullName>First_Scheduled_Treatment_MVN__c</fullName>
    <description>Date of enrollee&apos;s first scheduled treatment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Scheduled Treatment</label>
    <type>Date</type>
</CustomField>