force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/FirstName_MVN__c.field-meta.xml
<CustomField>
    <fullName>FirstName_MVN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>