force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Gender_MVN__c.field-meta.xml
<CustomField>
    <fullName>Gender_MVN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>