force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/JSON_Received_MVN__c.field-meta.xml
<CustomField>
    <fullName>JSON_Received_MVN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON Received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>