force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Last_Treatment_Date_MVN__c.field-meta.xml
<CustomField>
    <fullName>Last_Treatment_Date_MVN__c</fullName>
    <description>Approximate date of enrollee&apos;s last treatment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Treatment Date</label>
    <type>Date</type>
</CustomField>