force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/LastName_MVN__c.field-meta.xml
<CustomField>
    <fullName>LastName_MVN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>