force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Lead_MVN__c.field-meta.xml
<CustomField>
    <fullName>Lead_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Pending Consumers</relationshipLabel>
    <relationshipName>Pending_Consumers</relationshipName>
    <type>Lookup</type>
</CustomField>