force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Patient_Starter_Kit_MVN__c.field-meta.xml
<CustomField>
    <fullName>Patient_Starter_Kit_MVN__c</fullName>
    <description>Indicates whether or not to send the patient starter kit</description>
    <label>Patient Starter Kit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>