force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Phone_MVN__c.field-meta.xml
<CustomField>
    <fullName>Phone_MVN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>