force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Phone_Opt_In_MVN__c.field-meta.xml
<CustomField>
    <fullName>Phone_Opt_In_MVN__c</fullName>
    <description>Opt-in to receive phone calls</description>
    <label>Phone Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>