force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Postal_Code_MVN__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_MVN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>