force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Ready_to_Anonymize_MVN__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Anonymize_MVN__c</fullName>
    <description>Indicates that the record is ready to be anonymized.</description>
    <formula>IF(TODAY() &gt; (DATEVALUE(CreatedDate) + 14), TRUE , FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready to Anonymize</label>
    <type>Checkbox</type>
</CustomField>