force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/State_MVN__c.field-meta.xml
<CustomField>
    <fullName>State_MVN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>