force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Street_MVN__c.field-meta.xml
<CustomField>
    <fullName>Street_MVN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>