force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Treatment_Status_MVN__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Status_MVN__c</fullName>
    <label>Treatment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Began_Treatment</fullName>
                <label>Began Treatment</label>
            </value>
            <value>
                <fullName>Not_Begun</fullName>
                <label>Not Begun</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>