force-app/main/default/src/objects/Pending_Lead_MVN__c/fields/Voice_Messages_OK_MVN__c.field-meta.xml
<CustomField>
    <fullName>Voice_Messages_OK_MVN__c</fullName>
    <description>Indicates whether or not it is OK to leave a voice message.  Used for conversion to Contact Information.Voice Messages OK?</description>
    <label>Voice Messages OK?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>