force-app/main/default/src/objects/Pending_Lead_MVN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName_MVN__c</columns>
    <columns>LastName_MVN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Agreement_Status_MVN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>